<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/text_white"
    android:id="@+id/root_view"
    tools:context="com.grameenphone.mars.activity.MainActivity">


    <View
        android:id="@+id/border14"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="58dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chatroomRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingBottom="65dp">

        <Button
            android:id="@+id/jump_bottom"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            app:srcCompat="@drawable/shape_jump_to_bottom"
            android:text="@string/jump_to_latest"
            android:textAllCaps="false"
            android:textColor="#FFF" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/border15"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/msgedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="57dp"
            android:layout_marginTop="1dp"
            android:background="#FFF"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <ImageView
                android:id="@+id/emoticon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/emoji"
                ads:layout_constraintLeft_toLeftOf="parent"
                ads:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                ads:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                ads:layout_constraintVertical_bias="0.47"
                android:contentDescription="@string/emoticon_description" />

            <github.ankushsachdeva.emojicon.EmojiconEditText
                android:id="@+id/messageEditText"
                android:layout_width="240dp"
                android:maxWidth="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_write_message"
                emojicon:emojiconSize="28sp"
                android:textColorHint="#AEC3E3"
                android:layout_marginStart="10dp"
                ads:layout_constraintLeft_toRightOf="@+id/emoticon"
                android:layout_marginLeft="0dp"

                ads:layout_constraintRight_toLeftOf="@+id/attachment"
                ads:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                ads:layout_constraintHorizontal_bias="0.0"
                ads:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                ads:layout_constraintVertical_bias="0.473" />

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/attachment"
                ads:layout_constraintRight_toLeftOf="@+id/push_to_talk"
                ads:layout_constraintTop_toTopOf="@+id/push_to_talk"
                ads:layout_constraintBottom_toBottomOf="@+id/push_to_talk"
                android:layout_marginBottom="0dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/push_to_talk"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/voice_message"
                ads:layout_constraintRight_toRightOf="parent"
                ads:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                ads:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/send_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_send_button"
                ads:layout_constraintRight_toRightOf="parent"
                ads:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                ads:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/send_bn" />


        </android.support.constraint.ConstraintLayout>

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
