<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme.NoActionBar">


    <RelativeLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mars_logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/mars_logo" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mars_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="একটি অসাধারন জার্নি শুরু করার জন্য \nএখানে আপনার মোবাইল নাম্বারটি লিখুন "
            android:textAlignment="center"
            android:textColor="#8190a7"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="signed out"
            android:visibility="gone" />


        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/edt_bg_selector"
            android:hint="এখানে পিন কোডটি লিখুন"
            android:textAlignment="center"
            android:inputType="number"
            android:textColorHint="#aec3e3"
            android:textSize="16sp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:maxWidth="300dp"
            android:textColor="#aec3e3"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="visible"
            tools:text="ভেরিফিকেশন চলছে" />


        <RelativeLayout
            android:id="@+id/field_phone_number_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                app:contentColor="#aec3e3"
                app:defaultNameCode="BD"
                app:showFlag="false"
                app:showFullName="false" />


            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/ccp"
                android:layout_toRightOf="@+id/ccp"
                app:srcCompat="@drawable/edt_bg_selector"
                android:hint="@string/phone_number_field"
                android:inputType="phone"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:textColorHint="#aec3e3" />


        </RelativeLayout>


        <Button
            android:id="@+id/button_start_verification"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_phone_number_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/phone_submit_button_shape"
            android:paddingEnd="60dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingStart="60dp"
            android:text="@string/phone_submit_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_verify_phone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_verification_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/phone_submit_button_shape"
            android:paddingEnd="60dp"

            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingStart="60dp"
            android:text="ভেরিফাই করুন"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_verify_phone"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:text="নম্বর ভুল?"
            android:textColor="#26beff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/consent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_start_verification"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/consent"
            android:textAlignment="center"
            android:textColor="#aec3e3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/show_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/show_off"
            android:textAlignment="center"
            android:textColor="#aec3e3"
            android:textSize="12sp" />

    </RelativeLayout>


</LinearLayout>